<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GPSTesterActivity" >

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginRight="26dp"
        android:layout_toLeftOf="@+id/button1"
        android:text="Start Tracking" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="79dp"
        android:text="Save" />

    <CheckBox
        android:id="@+id/InternetCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GPSCheck"
        android:layout_below="@+id/GPSCheck"
        android:text="@string/InternetCheck" />

    <TextView
        android:id="@+id/Zeit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/MeterBar"
        android:layout_below="@+id/MeterBar"
        android:layout_marginTop="20dp"
        android:text="@string/Zeit" />

    <TextView
        android:id="@+id/naviLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/GPSCheck"
        android:layout_alignParentTop="true"
        android:text="@string/NaviLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/GPSCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/IntLabel"
        android:layout_below="@+id/naviLabel"
        android:text="@string/GPSCheck" />

    <TextView
        android:id="@+id/IntLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ZeitBar"
        android:layout_below="@+id/InternetCheck"
        android:text="@string/IntLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/Meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/IntLabel"
        android:layout_below="@+id/IntLabel"
        android:text="@string/Meter" />

    <SeekBar
        android:id="@+id/MeterBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Meter"
        android:layout_below="@+id/Meter"
        android:max="100" />

    <SeekBar
        android:id="@+id/ZeitBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Zeit"
        android:layout_centerHorizontal="true"
        android:max="100" />

    <TextView
        android:id="@+id/meterBarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/IntLabel"
        android:layout_toRightOf="@+id/Zeit"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/timeBarValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ZeitBar"
        android:layout_toRightOf="@+id/GPSCheck"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>